--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "eighteenpercent",
+  "name": "tenpercent",
   "license": "MIT",
   "version": "1.0.0",
+  "repository": "greatislander/tenpercent",
   "scripts": {
     "start": "micro",
     "dev": "micro-dev",
